# cs308_project

./: .gitignore  Cargo.toml  Dockerfile  README.md  arch.md  docker-compose.yml  setup.sh
src/: config.rs  errors.rs  lib.rs  main.rs
src/db/: mod.rs  pool.rs
src/db/migrations/: 001_create_users.sql
src/middleware/: auth.rs  cors.rs  mod.rs  role_guard.rs
src/models/: mod.rs  user.rs
src/routes/: cart.rs  mod.rs  pages.rs
src/services/: auth_service.rs  encryption_service.rs  mod.rs
static/css/: animations.css  components.css  globals.css  theme.css
static/js/: app.js
templates/: base.html
templates/components/: footer.html  navbar.html
templates/pages/: home.html  login.html  not_found.html  register.html
