[package]
name = "cs308-store"
version = "0.1.0"
edition = "2021"
description = "CS 308 Online Store — Axum + Tera + HTMX"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "compression-gzip", "trace"] }

# Templating
tera = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth & security
jsonwebtoken = "9"
argon2 = "0.5"

# PDF generation
genpdf = "0.2"

# Email
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "builder"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "cookies"] }